--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,7 @@ p{
 
 .section{
     min-height: 100vh;
+    align-items: center;
 }
 
 .menu-spacing{
@@ -217,6 +218,10 @@ p{
     flex-flow: column wrap;
     justify-content: center;
     min-height: 100vh;
+}
+
+.space-p{
+    padding-top: 40px;
 }
 
 .grid-one-content{
@@ -354,6 +359,7 @@ body .full-width{
     }
 
     .gallery-img img{
+        align-items: center;
         width: 100%;
         max-width: 100%;
         max-height: 100%;
@@ -361,6 +367,7 @@ body .full-width{
 
     .grid-one-content{
         display: block;
+        align-items: center;
     }
 
     .menu{
@@ -370,6 +377,103 @@ body .full-width{
 
     .menu-content{
         height: 100vh;
+    }
+
+    .menu-content, .menu-content ul{
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .menu{
+        display: none;
+    }
+
+    .close-menu-label::after{
+        content: '☰';
+        position: fixed;
+        z-index: 2;
+        top: 2rem;
+        right: 2rem;
+        background: #000000;
+        color: white;
+        font-size: 3rem;
+        line-height: 3rem;
+        width: 3rem;
+        height: 3rem;
+        text-align: center;
+        padding: 0.5rem;
+        cursor: pointer;
+    }
+
+    .close-menu:checked~.menu{
+        display: block;
+    }
+
+    .close-menu:checked~.close-menu-label::after{
+        content: '×'
+    }
+
+    .menu-spacing{
+        display: none;
+    }
+}
+
+@media (max-width: 585px) {
+
+    .iframe{
+        width: 80%;
+        height: 80%;
+    }
+
+    #imagi {
+        display: none;
+    }
+
+    .control-content{
+        position: static;
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: var(--gap);
+        min-height: 100vh;
+    }    
+
+    .main-content{
+        max-width: 100%;
+        margin: 0 auto;
+        padding: 8rem var(--gap);
+        text-align: center;
+    }
+
+    .intro-content{
+        position: static;
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: var(--gap);
+        min-height: 100vh;
+    }
+
+    .gallery-img img{
+        align-items: center;
+        width: 100%;
+        max-width: 100%;
+        max-height: 100%;
+    }
+
+    .grid-one-content{
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: center;
+        min-height: 100vh;
+        text-align: center;
+    }
+
+    .menu{
+        bottom: 0;
+        text-align: center;
+    }
+
+    .menu-content{
+        height: 100%;
     }
 
     .menu-content, .menu-content ul{
